[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/cat_planet.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/shield.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/game.gd" type="Script" id=3]
[ext_resource path="res://sprites/CÃ©u.png" type="Texture" id=4]

[node name="game" type="Node2D"]
script = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 800.0
margin_bottom = 600.0
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="shield" parent="." instance=ExtResource( 2 )]

[node name="cat_planet" parent="." instance=ExtResource( 1 )]

[node name="spawn_timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="spawn_timer_2" type="Timer" parent="."]
wait_time = 20.0
autostart = true

[node name="spawn_timer_3" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[connection signal="timeout" from="spawn_timer" to="." method="_on_spawn_timer_timeout"]
[connection signal="timeout" from="spawn_timer_2" to="." method="_on_spawn_timer_2_timeout"]
[connection signal="timeout" from="spawn_timer_3" to="." method="_on_spawn_timer_3_timeout"]
